--- a/src/MassTransit.Prometheus/MassTransit.Prometheus.csproj
+++ b/src/MassTransit.Prometheus/MassTransit.Prometheus.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,8 +12,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MassTransit" Version="5.1.5" />
-        <PackageReference Include="prometheus-net" Version="2.1.3" />
+        <PackageReference Include="MassTransit" Version="5.3.2" />
+        <PackageReference Include="prometheus-net" Version="3.0.3" />
     </ItemGroup>
 
 </Project>
